--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/logo.jpg" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
     />
-    <title>Vite App</title>
+    <title>Travel Wardrobe</title>
   </head>
   <body>
     <div id="app"></div>
