--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
     />
-    <title>Travel Wardrobe</title>
+    <title>GenWardrobe</title>
   </head>
   <body>
     <div id="app"></div>
